fix: No scrollbar in sidebar

--- a/src/style/sidebar.less
+++ b/src/style/sidebar.less
@@ -63,6 +63,7 @@
         .sidebar-page {
             display: flex;
             flex-direction: column;
+            height: 100%;
             &-header {
                 padding: 30px;
                 padding-bottom: 20px;
